test/classes/delete-free/lifetimes/l3.good
l3.chpl:13: In function 'bad_two_args':
l3.chpl:14: error: Reference to scoped variable cannot be returned
l3.chpl:13: note: consider scope of x
l3.chpl:17: In function 'bad_record_arg':
l3.chpl:18: error: Reference to scoped variable cannot be returned
l3.chpl:25: In function 'bad_return_return_record_arg':
l3.chpl:27: error: Reference to scoped variable cannot be returned
l3.chpl:26: note: consider scope of aa
